--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/pro-theme": "^0.0.55",
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fontsource/inter": "^4.5.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
