--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jorgeortiz41.github.io/frontend-portfolio/",
+  "homepage": "https://frontend-portfolio-seven.vercel.app/",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/pro-theme": "^0.0.55",
